# python_axel

./: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt
docs/: conf.py  index.rst  usage.rst
docs/_build/doctrees/: authors.doctree  contributing.doctree  environment.pickle  history.doctree  index.doctree  installation.doctree  readme.doctree  usage.doctree
docs/_build/html/: .buildinfo  authors.html  contributing.html  genindex.html  history.html  index.html  installation.html  objects.inv  readme.html  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: installation.rst.txt
src/axel/: __init__.py
src/python_axel.egg-info/: PKG-INFO  SOURCES.txt
src/test_python_axel.egg-info/: PKG-INFO  SOURCES.txt
